--- a/app/src/main/res/layout/layout_otp.xml
+++ b/app/src/main/res/layout/layout_otp.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:padding="20dp"
     android:paddingBottom="10dp"
     android:layout_margin="30dp">
 
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="@string/otp"
         android:textSize="32sp"
-        android:gravity="center_horizontal"/>
+        android:textAlignment="center"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
