--- a/app/src/main/res/layout/fragment_speaker.xml
+++ b/app/src/main/res/layout/fragment_speaker.xml
@@ -1,12 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/transparent"
+    android:orientation="vertical"
     tools:context=".fragments.SpeakerFragment">
+    <TextView
+        android:id="@+id/speaker_position"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="textEnd"
+        android:textSize="24sp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="15dp"/>
+
     <ImageView
         android:id="@+id/speaker_img"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        android:background="@color/transparent"
+        app:layout_constraintTop_toBottomOf="@+id/speaker_position"
+        app:layout_constraintBottom_toTopOf="@+id/speaker_name"/>
 
-</LinearLayout>
+    <TextView
+        android:layout_margin="10dp"
+        android:id="@+id/speaker_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
