--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-    tools:context=".activities.LoginActivity"
+    tools:context=".activities.Login"
     android:fitsSystemWindows="true">
 
     <ImageView
