--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,11 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EEF2F2"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+    tools:context=".activities.Home"
+    android:fitsSystemWindows="true">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -19,7 +23,7 @@
         android:layout_height="440dp"
         android:layout_width="440dp"
         android:layout_marginTop="-110dp"
-        android:layout_marginLeft="-180dp"
+        android:layout_marginStart="-180dp"
         app:srcCompat="@drawable/homebg_circle1"/>
     </RelativeLayout>
 
