--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activities.Event">
+    tools:context=".activities.EventActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
