--- a/app/src/main/res/layout/activity_sponsors.xml
+++ b/app/src/main/res/layout/activity_sponsors.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.Sponsors">
+    tools:context=".activities.SponsorsActivity">
 
     <ImageView
         android:id="@+id/spons_bgcircle_5"
