--- a/app/src/main/res/layout/custom_alert_menu.xml
+++ b/app/src/main/res/layout/custom_alert_menu.xml
@@ -111,7 +111,7 @@
             android:paddingStart="16dp"
             android:paddingTop="10dp"
             android:paddingEnd="16dp"
-            android:paddingBottom="16dp"
+            android:layout_marginBottom="16dp"
             android:focusable="true"
             android:background="?attr/selectableItemBackground">
 
