--- a/app/src/main/res/layout/activity_esummit.xml
+++ b/app/src/main/res/layout/activity_esummit.xml
@@ -176,6 +176,8 @@
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="30dp"
             android:background="@color/transparent"
+            android:animateLayoutChanges="true"
+            android:animationCache="true"
             app:layout_constraintBottom_toBottomOf="@id/es_lower_poly"
             app:layout_constraintEnd_toEndOf="@id/es_lower_poly"
             app:layout_constraintStart_toStartOf="@id/es_lower_poly"
