--- a/app/src/main/res/drawable/ic_curved_rect.xml
+++ b/app/src/main/res/drawable/ic_curved_rect.xml
@@ -4,4 +4,6 @@
     <size android:width="20dp" android:height="20dp"/>
     <solid android:color="@color/colorWhite"/>
     <corners android:radius="20dp"/>
+    <stroke android:color="@color/aboutusHeading"
+        android:width="1dp" />
 </shape>
