--- a/app/src/main/res/layout/custom_alert_menu.xml
+++ b/app/src/main/res/layout/custom_alert_menu.xml
@@ -58,6 +58,8 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:layout_margin="-10dp"
+                app:srcCompat="@drawable/ic_otp"
                 android:layout_gravity="center"
                 android:padding="4dp" />
 
