--- a/app/src/main/res/layout/layout_card_team.xml
+++ b/app/src/main/res/layout/layout_card_team.xml
@@ -6,55 +6,45 @@
     android:layout_height="wrap_content"
     android:layout_margin="15dp">
 
-    <LinearLayout
-        android:layout_width="250dp"
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
-        android:alpha="0.2"
-        android:orientation="vertical">
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"/>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="250dp"/>
-
-    </LinearLayout>
+        app:cardCornerRadius="8dp"
+        app:cardElevation="8dp">
 
     <LinearLayout
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
+        android:background="@drawable/about_us_card"
         android:orientation="vertical">
         <TextView
             android:id="@+id/memberpost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="22sp"
+            android:textSize="24sp"
             android:text="@string/post"
             android:layout_margin="5dp"
-            android:textColor="@color/colorLightBlack"
+            android:textColor="@color/colorWhite"
             android:layout_gravity="center"/>
 
         <ImageView
         android:id="@+id/memberpic"
         android:layout_width="match_parent"
-        android:layout_height="250dp"/>
+        android:layout_height="200dp"/>
 
         <TextView
             android:id="@+id/membername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="22sp"
+            android:textSize="24sp"
             android:maxLines="1"
             android:text="@string/name"
             android:gravity="center_horizontal"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:textColor="@color/colorLightBlack"
+            android:textColor="@color/colorWhite"
             android:layout_gravity="center"/>
     </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
