--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,11 @@
     <color name="bgBottomNavigation">#fe485a</color>
     <color name="empty"> </color>
 
+    <!--ABOUTUS SECTION BELOW-->
+    <color name="aboutusHeading">#414141</color>
+    <color name="aboutusText">#EFEFEF</color>
+    <color name="aboutusBg">#D9F5FF</color>
+    <color name="aboutusToolbarBg">#5AB1D8</color>
+    <color name="aboutusCardBg">#4DA7CF</color>
+
 </resources>
