--- a/app/src/main/res/layout/activity_esummit.xml
+++ b/app/src/main/res/layout/activity_esummit.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="100dp"
-        android:src="@drawable/ic_esummit"
+        app:srcCompat="@drawable/ic_esummit"
         app:layout_constraintBottom_toTopOf="@id/upper_guide"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +61,7 @@
         android:layout_height="150dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:src="@drawable/es_triangle"
+        android:background="@drawable/es_triangle"
         app:layout_constraintBottom_toTopOf="@id/guide_triangle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
