--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -73,12 +73,11 @@
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/hamburgerButton"
-        android:layout_width="100dp"
-        android:layout_height="70dp"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
         app:srcCompat="@drawable/ic_hamburger"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="150dp"
-        android:layout_marginEnd="150dp"
+        app:layout_constraintHorizontal_bias="0.5"
         android:background="@color/transparent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
