--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
     tools:context=".activities.LoginActivity"
     android:fitsSystemWindows="true">
 
@@ -22,23 +21,24 @@
     <ImageView
         android:id="@+id/upper_poly"
         android:layout_width="0dp"
-        android:layout_height="650dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_height="550dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="@drawable/login_upper_poly"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/login_guide_20"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/login_upper_poly" />
+        app:layout_constraintBottom_toTopOf="@id/login_guide_17"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/ic_upper_ecell"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginBottom="340dp"
         android:src="@drawable/ic_ecell"
-        app:layout_constraintBottom_toTopOf="@id/login_linear_layout"
+        app:layout_constraintBottom_toBottomOf="@id/upper_poly"
         app:layout_constraintEnd_toEndOf="@id/upper_poly"
         app:layout_constraintStart_toStartOf="@id/upper_poly"
         app:layout_constraintTop_toTopOf="@+id/upper_poly" />
@@ -97,12 +97,11 @@
         android:id="@+id/forgot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginTop="15dp"
         android:text="@string/forgot"
-        android:textSize="20sp"
+        android:textSize="12sp"
         android:textStyle="italic"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
         app:layout_constraintEnd_toEndOf="@id/upper_poly"
         app:layout_constraintStart_toStartOf="@id/upper_poly"
@@ -110,17 +109,16 @@
 
     <Button
         android:id="@+id/sign_in_button"
-        android:layout_width="0dp"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginEnd="20dp"
+        android:textAllCaps="false"
         android:background="@drawable/button_sign_in"
         android:text="@string/sign_in"
         android:textColor="@color/colorWhite"
-        android:textSize="25sp"
-        android:textStyle="bold"
+        android:textSize="24sp"
+        app:layout_constraintHorizontal_bias="0.89"
         app:layout_constraintBottom_toTopOf="@+id/to_sign_in"
         app:layout_constraintEnd_toEndOf="@id/upper_poly"
         app:layout_constraintStart_toStartOf="@id/upper_poly"
@@ -130,54 +128,61 @@
         android:id="@+id/to_sign_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="210dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="80dp"
-        android:text="@string/sign_in"
-        android:textSize="30sp"
-        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.85"
+        app:layout_constraintVertical_bias="0.3"
         android:clickable="true"
         android:focusable="true"
-        android:rotation="20"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/sign_in"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/login_guide_17"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/login_guide_20"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/login_guide_20"
-        android:orientation="horizontal"
+        android:id="@+id/login_guide_12"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent=".21"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.12"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/login_guide_13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.12" />
+        app:layout_constraintGuide_percent="0.15" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/login_guide_17"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintGuide_percent="0.15"/>
 
     <ImageView
         android:id="@+id/google_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="30dp"
         app:srcCompat="@drawable/ic_google"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/login_guide_13"
+        app:layout_constraintBottom_toTopOf="@id/login_guide_12"
         app:layout_constraintEnd_toStartOf="@id/fb_button"/>
 
     <ImageView
         android:id="@+id/fb_button"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="80dp"
         android:layout_marginEnd="130dp"
-        app:srcCompat="@drawable/ic_facebook"
+        app:srcCompat="@drawable/ic_facebook_letter_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/google_button"
-        app:layout_constraintTop_toTopOf="@+id/login_guide_13" />
+        app:layout_constraintTop_toTopOf="@+id/login_guide_12" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/login_guide_32"
@@ -193,7 +198,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:rotation="180"
-        app:srcCompat="@drawable/login_lower_poly"
+        android:background="@drawable/login_lower_poly"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_guide_13"
@@ -203,18 +208,17 @@
         android:id="@+id/to_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="250dp"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintVertical_bias="0.6"
         android:text="@string/register"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:clickable="true"
         android:focusable="true"
-        android:rotation="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_guide_13" />
+        app:layout_constraintTop_toBottomOf="@+id/login_guide_13"
+        app:layout_constraintBottom_toTopOf="@id/login_guide_32"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/login_guide_40"
@@ -225,17 +229,15 @@
 
     <ImageView
         android:id="@+id/ic_lower_ecell"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginBottom="15dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@drawable/ic_ecell"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintVertical_bias="0.9"
         app:layout_constraintBottom_toTopOf="@id/login_guide_40"
         app:layout_constraintEnd_toEndOf="@id/lower_poly"
         app:layout_constraintStart_toStartOf="@+id/lower_poly"
-        app:layout_constraintTop_toBottomOf="@+id/login_guide_13" />
+        app:layout_constraintTop_toBottomOf="@+id/login_guide_17" />
 
     <LinearLayout
         android:id="@+id/register_linear_layout"
@@ -268,7 +270,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="First Name"
+                    android:inputType="textPersonName"
+                    android:lines="1"
                     android:maxLines="1"
+                    android:nextFocusDown="@id/register_last_name"
                     android:textSize="20sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -346,22 +351,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.83"/>
+        app:layout_constraintGuide_percent="0.86"/>
 
     <Button
         android:id="@+id/register_button"
         android:layout_width="150dp"
         android:layout_height="45dp"
-        android:layout_alignStart="@+id/lower_poly"
-        android:layout_alignTop="@+id/lower_poly"
-        android:layout_alignEnd="@+id/lower_poly"
-        android:layout_marginStart="160dp"
-        android:layout_marginEnd="50dp"
+        app:layout_constraintHorizontal_bias="0.8"
         android:background="@drawable/button_sign_in"
         android:text="@string/register"
         android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:textStyle="bold"
+        android:textSize="24sp"
+        android:textAllCaps="false"
         app:layout_constraintStart_toStartOf="@id/lower_poly"
         app:layout_constraintTop_toBottomOf="@+id/login_guide_83"
         app:layout_constraintEnd_toEndOf="@id/lower_poly"/>
@@ -371,6 +372,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.96"/>
+        app:layout_constraintGuide_percent="0.94"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
