ESummit Activity(2), Speakers API added.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,6 @@
     <color name="associateSponsBlue">#010C54</color>
     <color name="black_overlay">#66000000</color>
     <color name="bgBottomNavigation">#fe485a</color>
-    <color name="empty"> </color>
+    <color name="empty">#616161</color>
 
 </resources>
