--- a/app/src/main/res/layout/activity_esummit.xml
+++ b/app/src/main/res/layout/activity_esummit.xml
@@ -50,139 +50,65 @@
         android:text="@string/es_date"
         android:textAlignment="center"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/es_inner_constraint"
+        app:layout_constraintBottom_toTopOf="@+id/es_guide_heading"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/e_summit_text" />
 
-    <ImageView
-        android:id="@+id/es_triangle"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:background="@drawable/es_triangle"
-        app:layout_constraintBottom_toTopOf="@id/guide_triangle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/e_summit_date" />
-
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guide_triangle"
+        android:id="@+id/es_guide_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".5" />
+        app:layout_constraintGuide_percent=".28" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/es_inner_constraint"
+    <StackView
+        android:id="@+id/es_stack_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/e_summit_date">
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toBottomOf="@id/es_guide_heading"
+        app:layout_constraintBottom_toBottomOf="@id/es_guide_about"
+        android:clipChildren="false"/>
 
-        <ImageView
-            android:id="@+id/es_upper_poly"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:scaleX="-1"
-            android:src="@drawable/es_poly"
-            app:layout_constraintBottom_toTopOf="@id/guide_upoly"
-            app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/es_guide_about"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9"/>
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_upoly"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.95" />
+    <ImageView
+        android:id="@+id/es_about_rect"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintTop_toBottomOf="@id/es_guide_about"
+        android:background="@drawable/ic_curved_rect"
+        app:layout_constraintBottom_toBottomOf="@id/es_about_detail"/>
 
-        <TextView
-            android:id="@+id/es_about"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginBottom="100dp"
-            android:autoSizeTextType="uniform"
-            android:lines="14"
-            android:text="@string/es_intro"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@id/es_upper_poly"
-            app:layout_constraintEnd_toEndOf="@id/es_upper_poly"
-            app:layout_constraintStart_toStartOf="@id/es_upper_poly"
-            app:layout_constraintTop_toTopOf="@id/es_upper_poly" />
+    <TextView
+        android:id="@+id/es_about_text"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/es_about_rect"
+        android:text="@string/about_es_19"
+        android:padding="5dp"
+        app:layout_constraintStart_toStartOf="@id/es_about_rect"
+        app:layout_constraintEnd_toEndOf="@id/es_about_rect"
+        android:textSize="34sp"/>
 
-        <TextView
-            android:id="@+id/to_about_es"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="100dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:text="@string/about_es_19"
-            android:textColor="#000"
-            android:textSize="25sp"
-            app:layout_constraintBottom_toBottomOf="@id/es_upper_poly"
-            app:layout_constraintStart_toStartOf="@id/es_upper_poly" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_lpoly"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.72" />
-
-        <ImageView
-            android:id="@+id/es_lower_poly"
-            android:layout_width="match_parent"
-            android:layout_height="480dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="-100dp"
-            android:rotation="180"
-            android:scaleX="-1"
-            android:src="@drawable/es_poly"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/guide_lpoly" />
-
-        <TextView
-            android:id="@+id/to_speaker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:layout_marginEnd="30dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:text="@string/speakers"
-            android:textColor="#000"
-            android:textSize="25sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/es_lower_poly" />
-
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="160dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="30dp"
-            android:background="@color/transparent"
-            android:animateLayoutChanges="true"
-            android:animationCache="true"
-            app:layout_constraintBottom_toBottomOf="@id/es_lower_poly"
-            app:layout_constraintEnd_toEndOf="@id/es_lower_poly"
-            app:layout_constraintStart_toStartOf="@id/es_lower_poly"
-            app:layout_constraintTop_toTopOf="@id/es_lower_poly" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/es_about_detail"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/es_about_text"
+        android:text="@string/es_intro"
+        app:layout_constraintStart_toStartOf="@id/es_about_rect"
+        app:layout_constraintEnd_toEndOf="@id/es_about_rect"
+        android:textSize="20sp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
