--- a/app/src/main/res/layout/custom_alert_menu.xml
+++ b/app/src/main/res/layout/custom_alert_menu.xml
@@ -65,7 +65,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/verifyotp"
+                android:text="@string/verify_otp"
                 android:padding="2dp"
                 android:textAlignment="center"
                 android:textColor="@color/colorLightBlack"
