--- a/app/src/main/res/layout/es_stack_item.xml
+++ b/app/src/main/res/layout/es_stack_item.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/stack_item_card"
-    android:layout_width="match_parent"
+    android:layout_width="300dp"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/empty">
 
     <!--<TextView-->
         <!--android:id="@+id/speaker_position"-->
@@ -16,9 +18,10 @@
         <!--android:layout_margin="15dp"/>-->
 
     <ImageView
-        android:id="@+id/speaker_img"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:id="@+id/speaker_image"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/speaker_name"
@@ -28,4 +31,4 @@
         android:textAlignment="center"
         android:textSize="32sp"/>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
