--- a/app/src/main/res/layout/custom_alert_menu.xml
+++ b/app/src/main/res/layout/custom_alert_menu.xml
@@ -47,8 +47,8 @@
             android:layout_height="2dp"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
             android:background="#AFAFAF"/>
 
         <LinearLayout
@@ -61,7 +61,7 @@
             android:paddingEnd="16dp"
             android:clickable="true"
             android:focusable="true"
-            android:background="?attr/selectableItemBackground">
+            android:backgroun>
 
             <ImageView
                 android:layout_width="35dp"
