--- a/app/src/main/res/layout/fragment_aim.xml
+++ b/app/src/main/res/layout/fragment_aim.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/aim_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/nova_round"
+                android:fontFamily="@font/pt_sans"
                 android:padding="20dp"
                 android:text="@string/aim_text"
                 android:textColor="@color/aboutusHeading"
@@ -54,11 +54,11 @@
                 android:id="@+id/vision_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/nova_round"
+                android:fontFamily="@font/pt_sans"
                 android:padding="20dp"
                 android:text="@string/vision_text"
                 android:textAlignment="textEnd"
-                android:textColor="@color/aboutusText"
+                android:textColor="@color/aboutusHeading"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
