--- a/app/src/main/res/anim/slide_up.xml
+++ b/app/src/main/res/anim/slide_up.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
-        android:duration="200"
-        android:fromYDelta="0%p"
+        android:duration="@android:integer/config_shortAnimTime"
+        android:fromYDelta="30%p"
         android:interpolator="@android:anim/accelerate_interpolator"
-        android:toYDelta="-15%p">
+        android:toYDelta="0%p">
     </translate>
 </set>
