--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,11 +4,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/login_outer_constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
     android:background="@color/colorBackground"
-    tools:context=".activities.LoginActivity"
-    android:fitsSystemWindows="true">
+    tools:context=".activities.LoginActivity">
 
     <ImageView
         android:id="@+id/main_background"
@@ -66,6 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
+                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz123456789.@"
                 android:inputType="text"
                 android:maxLines="1"
                 android:textSize="20sp" />
@@ -172,6 +175,19 @@
         app:layout_constraintBottom_toTopOf="@id/login_guide_12"
         app:layout_constraintEnd_toStartOf="@id/fb_button"/>
 
+    <!--<com.facebook.login.widget.LoginButton-->
+        <!--android:id="@+id/login_button"-->
+        <!--android:layout_width="40dp"-->
+        <!--android:layout_height="40dp"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:layout_marginTop="20dp"-->
+        <!--android:layout_marginStart="80dp"-->
+        <!--android:layout_marginEnd="130dp"-->
+        <!--android:background="@drawable/ic_facebook_letter_logo"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toEndOf="@+id/google_button"-->
+        <!--app:layout_constraintTop_toTopOf="@+id/login_guide_12"/>-->
+
     <ImageView
         android:id="@+id/fb_button"
         android:layout_width="40dp"
@@ -270,6 +286,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="First Name"
+                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:inputType="textPersonName"
                     android:lines="1"
                     android:maxLines="1"
@@ -288,6 +305,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Last Name"
+                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                     android:inputType="text"
                     android:maxLines="1"
                     android:textSize="20sp" />
@@ -305,12 +323,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
+                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.@1234567890"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:textSize="20sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/register_password_layout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="65dp"
@@ -339,6 +359,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/mobile_number"
                 android:maxLength="10"
+                android:digits="1234567890"
                 android:inputType="phone"
                 android:maxLines="1"
                 android:textSize="20sp" />
